# Kinship_Inference

./: .gitignore  LICENCE  README  README.md  Snakefile  cluster.yaml  environment.yml  input_preparation_func.py  kin-3.1.3-environment.yml  manual.txt  prepare_4_kin.sh  run_snakemake_eva.sh
KIN_snakemake_version/: cutoffPlot.R  diff_6_14.R  hmm_inbred_constVar_testing.py  readPlot.R
KIN_toy_example/: README  chrm_list.csv  input_diffs_hmm.csv  input_hbd_hmm_diff.csv  input_hbd_hmm_total.csv  input_total_hmm.csv  relatives_list.txt
KINgaroo_snakemake_version/: README  README_old  Snakefile  hbd_hmm_func_new.py  input_preparation_func.py
Simulations/: README  Snakefile  input_preparation_func.py  simulation_hapcallingall_function.py
Simulations_test/: README  Snakefile  simulation_hapcallingall_function.py
Simulations_transitions/: README  Snakefile  simulation_hapcallingall_function.py
example_files/: KIN_results.csv  bedfile.bed  targets.txt
hmm_numba/: READout_plot.R  Snakefile  (+6 more)
pypackage/kin/: README.md  setup.cfg
pypackage/kin/KIN/: __main__.py
pypackage/kin/KIN.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pypackage/kin/KIN/hmm_scripts/: constants.py  helpers.py  hmm_functions.py
pypackage/kingaroo/: LICENSE  README.md  setup.cfg
pypackage/kingaroo/KINgaroo/: __main__.py
pypackage/kingaroo/KINgaroo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pypackage/kingaroo/KINgaroo/KINgaroo_scripts/: constants.py  hbd_hmm_functions.py  helpers.py  input_preparation_functions.py
(+180 files in other folders)
