[metadata]
name = KINgaroo
version = 0.1.0
author = Divyaratan Popli
author_email = divyaratan_popli@eva.mpg.de
description = Software to generate input files for KIN
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DivyaratanPopli/KIN
project_urls =
    Bug Tracker = https://github.com/DivyaratanPopli/KIN/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    scipy
    numpy
    pandas
    numba
    pysam
    pybedtools	
python_requires = >=3.6

[options.entry_points]
console_scripts =
    KINgaroo = KINgaroo:__main__.main
